force-app/main/default/objects/PH_Transaction__c/PH_Transaction__c.object-meta.xml
<CustomObject>
    <label>Profiler Transaction</label>
    <pluralLabel>Profiler Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>