force-app/main/default/objects/PH_Transaction__c/fields/Cpu_Ms__c.field-meta.xml
<CustomField>
    <fullName>Cpu_Ms__c</fullName>
    <label>CPU (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>