force-app/main/default/objects/PH_Transaction__c/fields/Dml_Count__c.field-meta.xml
<CustomField>
    <fullName>Dml_Count__c</fullName>
    <label>DML Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>