force-app/main/default/objects/PH_Transaction__c/fields/External_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Log_Id__c</fullName>
    <label>External Log Id</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
</CustomField>