force-app/main/default/objects/PH_Transaction__c/fields/Heap_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Heap_Bytes__c</fullName>
    <label>Heap (bytes)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>