force-app/main/default/objects/PH_Transaction__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Text</type>
    <length>80</length>
</CustomField>