force-app/main/default/objects/PH_Transaction__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <type>Text</type>
    <length>120</length>
</CustomField>