force-app/main/default/objects/PH_Transaction__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Run</label>
    <type>Lookup</type>
    <referenceTo>PH_Run__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
</CustomField>