force-app/main/default/objects/PH_Transaction__c/fields/Soql_Count__c.field-meta.xml
<CustomField>
    <fullName>Soql_Count__c</fullName>
    <label>SOQL Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>