force-app/main/default/objects/PH_Transaction__c/fields/Soql_Ms__c.field-meta.xml
<CustomField>
    <fullName>Soql_Ms__c</fullName>
    <label>SOQL Time (ms)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>