force-app/main/default/objects/PH_Transaction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Profiled Transactions</relationshipLabel>
    <relationshipName>Profiled_Transactions</relationshipName>
</CustomField>